--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/logobookstore.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clothes-store</title>
+    <title>Book Store</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script>
+  var prevScrollpos = window.pageYOffset;
+  window.onscroll = function() {
+  var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("NavBar").style.top = "0";
+  } else {
+    document.getElementById("NavBar").style.top = "-50px";
+  }
+  prevScrollpos = currentScrollPos;
+}
+</script> -->
+
+
   </body>
 </html>
